[gd_scene load_steps=27 format=1]

[ext_resource path="res://Death/Death.gd" type="Script" id=1]
[ext_resource path="res://Death/Sprites/Idle/death idling1.png" type="Texture" id=2]
[ext_resource path="res://Death/Sprites/Idle/death idling2.png" type="Texture" id=3]
[ext_resource path="res://Death/Sprites/Idle/death idling3.png" type="Texture" id=4]
[ext_resource path="res://Death/Sprites/Idle/death idling4.png" type="Texture" id=5]
[ext_resource path="res://Death/Sprites/Idle/death idling5.png" type="Texture" id=6]
[ext_resource path="res://Death/Sprites/Idle/death idling6.png" type="Texture" id=7]
[ext_resource path="res://Death/Sprites/Idle/death idling7.png" type="Texture" id=8]
[ext_resource path="res://Death/Sprites/Move/p2move2.png" type="Texture" id=9]
[ext_resource path="res://Death/Sprites/Move/p2move3.png" type="Texture" id=10]
[ext_resource path="res://Death/Sprites/Shoot/shoot1.png" type="Texture" id=11]
[ext_resource path="res://Death/Sprites/Shoot/shoot2.png" type="Texture" id=12]
[ext_resource path="res://Death/Sprites/Shoot/shoot3.png" type="Texture" id=13]
[ext_resource path="res://Death/Sprites/Action/P2motion1.png" type="Texture" id=14]
[ext_resource path="res://Death/Sprites/Action/P2motion8.png" type="Texture" id=15]
[ext_resource path="res://Death/Sprites/Action/P2motion7.png" type="Texture" id=16]
[ext_resource path="res://Death/Sprites/Action/P2motion4.png" type="Texture" id=17]
[ext_resource path="res://Death/Sprites/Action/P2motion3.png" type="Texture" id=18]
[ext_resource path="res://Death/Sprites/Action/P2motion2.png" type="Texture" id=19]
[ext_resource path="res://Death/Sprites/Action/P2motion9.png" type="Texture" id=20]
[ext_resource path="res://Death/Sprites/Action/P2motion5.png" type="Texture" id=21]
[ext_resource path="res://Death/Sprites/Action/P2motion6.png" type="Texture" id=22]
[ext_resource path="res://Assets/fonts/PixelGothic.fnt" type="BitmapFont" id=23]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 9.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "move",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "shoot",
"speed": 13.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "actionDown",
"speed": 8.5
}, {
"frames": [ ExtResource( 14 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 20 ) ],
"loop": false,
"name": "actionUp",
"speed": 10.5
} ]

[sub_resource type="SampleLibrary" id=3]


[node name="Death" type="KinematicBody2D"]

transform/scale = Vector2( 2, 2 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 3.96154, 0, 0.5 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="DeathSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "actionDown"
frame = 6
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="DeathBody" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 0.5 )
transform/scale = Vector2( 2, 3.96154 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="DeathName" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -25.5
margin/top = 31.0
margin/right = 76.5
margin/bottom = 61.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player X"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="ActionReloadBar" type="ProgressBar" parent="."]

rect/rotation = 90.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 27.0
margin/top = 28.0
margin/right = 139.0
margin/bottom = 44.0
range/min = -10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="MoveReloadBar" type="ProgressBar" parent="."]

rect/rotation = 90.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -35.0
margin/top = 28.0
margin/right = 77.0
margin/bottom = 44.0
range/min = -10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="DelayReloadBar" type="ProgressBar" parent="."]

visibility/visible = false
rect/rotation = 90.0
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 27.0
margin/top = 28.0
margin/right = 139.0
margin/bottom = 44.0
range/min = -10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="FX" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="DeathSprite" to="." method="_on_DeathSprite_finished"]


